Assigning different class for recipe items

--- a/recipe/pancakes.html
+++ b/recipe/pancakes.html
@@ -14,7 +14,14 @@
     <h2>Quick Recipe</h2>
     <div>
       <h3>Pancakes</h3>
-      
+      <div="recipe">
+        <img src="recipe_images/pancake.jpg" alt="Pancake" align:"left" height="100px" width="150px">
+        <p>
+          I know you
+        </p>
+        <h4 align="right">Ingredients</h4>
+
+      </div>
     </div>
     <div class="navbar">
       <a href="donate.html" >Donate</a>
