Names in 'alt' been corrected

--- a/recipe/spaghetti.html
+++ b/recipe/spaghetti.html
@@ -14,7 +14,7 @@
     <h2>Quick Recipe</h2>
     <h3>Spaghetti</h3>
     <div class="recipe">
-      <img src="recipe_images/easy-spaghetti1.jpg" alt="Pancake" align:"left" height="100px" width="90px">
+      <img src="recipe_images/easy-spaghetti1.jpg" alt="Spaghetti" align:"left" height="100px" width="90px">
       <div>
         <h4>Ingredients</h4>
         <ul>
