--- a/recipe/potato_&_pea_frittata.html
+++ b/recipe/potato_&_pea_frittata.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
-    <h3>Pasta</h3>
+    <h3>Potato & Pea Frittata</h3>
     <div class="recipe">
       <img src="recipe_images/Potato-&-Pea-Frittata.jpg" alt="Potato & Pea Frittata" align:"left" height="100px" width="150px">
       <div>
