--- a/recipe/wholemeal_pizzas_with_tomato_&_pesto.html
+++ b/recipe/wholemeal_pizzas_with_tomato_&_pesto.html
@@ -18,19 +18,17 @@
       <div>
         <h4>Ingredients</h4>
         <ul>
-          <li>6 baby Red Royale or baby white potatoes, thinly sliced</li>
-          <li>1 cup (120g) frozen peas</li>
-          <li>8 Coles Australian Free-Range Eggs</li>
-          <li>80g goat’s cheese, crumbled</li>
-          <li>120g pkt Coles Australian 4 Leaf Salad</li>
+          <li>2 large pieces wholemeal pita bread or wholemeal wraps</li>
+          <li>150g Coles Basil Pesto Dip</li>
+          <li>350g mixed tomatoes, halved</li>
+          <li>220g tub cherry bocconcini, drained, coarsely torn</li>
+          <li>60g pkt Coles Australian Baby Rocket</li>
         </ul>
         <h4>Methods</h4>
         <ol>
-          <li>Heat a greased 20cm (base measurement) ovenproof non-stick frying pan over medium heat. Add one-quarter of the potato. Cook for 1 min each side or until light golden and tender. Transfer to a plate. Repeat in 3 more batches with remaining potato.</li>
-          <li>Meanwhile, cook the peas in a medium saucepan of boiling water until tender. Drain well.</li>
-          <li>Lightly whisk the eggs in a medium bowl. Season</li>
-          <li>Preheat grill on medium. Arrange half the potato over the base of the frying pan. Top with half the peas and half the goat’s cheese. Continue layering with the remaining potato, peas and goat’s cheese. Pour over the egg and gently swirl the pan to cover the potato mixture. Cook over medium heat for 6 mins or until almost set.</li>
-          <li>Cook under grill for 5 mins or until just set. Cut into wedges. Serve with salad leaves.</li>
+          <li>Heat a barbecue grill or chargrill on high. Cook the pita breads or wraps for 1-2 mins each side or until lightly charred. Transfer to a clean work surface.</li>
+          <li>Reserve one-third of the pesto dip. Spread the pita breads evenly with the remaining pesto dip and top with the tomato and bocconcini. Transfer to a serving plate.</li>
+          <li>Sprinkle the pizzas with the rocket and spoon over the reserved pesto dip. Cut into wedges to serve.</li>
         </ol>
       </div>
     </div>
