--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>
       Excess Food App
     </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="indexscript.js"></script>
   </head>
   <div class="container">
   <body>
@@ -16,41 +18,53 @@
 
     <div class="h2">
       <h2>Ingredient List</h2>
-    </div> 
-    
-    <p>Select the ingredients you have available from the list provided below:</p>
+    </div>
+
+    <p>Select the ingredients you have available Or click Show recipes to see the recipe list</p></br>
 
     <form  action="quickrecipe.html">
       <div class="checkboxes">
-        <div><input type="checkbox" id="checkbox1" /><label for="checkbox1"> Garlic</label></div>
-        <div><input type="checkbox" id="checkbox2" /><label for="checkbox2"> Shallots</label></div>
-        <div><input type="checkbox" id="checkbox3" /><label for="checkbox3"> Potatoes</label></div>
-        <div><input type="checkbox" id="checkbox4" /><label for="checkbox4"> Tomatoes</label></div>
-        <div><input type="checkbox" id="checkbox5" /><label for="checkbox5"> Butter</label></div>
-        <div><input type="checkbox" id="checkbox6" /><label for="checkbox6"> Eggs</label></div>
-        <div><input type="checkbox" id="checkbox7" /><label for="checkbox7"> Bacon</label></div>
-        <div><input type="checkbox" id="checkbox8" /><label for="checkbox8"> Lemons</label></div>
-        <div><input type="checkbox" id="checkbox9" /><label for="checkbox9"> Milk</label></div>
-        <div><input type="checkbox" id="checkbox10" /><label for="checkbox10"> Rice</label></div>
-        <div><input type="checkbox" id="checkbox11" /><label for="checkbox11"> Sugar</label></div>
-        <div><input type="checkbox" id="checkbox12" /><label for="checkbox12"> Oil</label></div>
-        <div><input type="checkbox" id="checkbox13" /><label for="checkbox13"> Stock</label></div>
-        <div><input type="checkbox" id="checkbox14" /><label for="checkbox14"> Pasta</label></div>
-        <div><input type="checkbox" id="checkbox15" /><label for="checkbox15"> Cinnamon</label></div>
-        <div><input type="checkbox" id="checkbox16" /><label for="checkbox16"> Beans</label></div>
-        <div><input type="checkbox" id="checkbox17" /><label for="checkbox17"> Honey</label></div>
-        <div><input type="checkbox" id="checkbox18" /><label for="checkbox18"> Flour</label></div>
+        <div><input type="checkbox" id="garlic" /><label for="garlic"> Garlic</label></div>
+        <div><input type="checkbox" id="shallots" /><label for="shallots"> Shallots</label></div>
+        <div><input type="checkbox" id="potato" /><label for="potato"> Potatoes</label></div>
+        <div><input type="checkbox" id="tomato" /><label for="tomato"> Tomatoes</label></div>
+        <div><input type="checkbox" id="butter" /><label for="butter"> Butter</label></div>
+        <div><input type="checkbox" id="egg" /><label for="egg"> Eggs</label></div>
+        <div><input type="checkbox" id="bacon" /><label for="bacon"> Bacon</label></div>
+        <div><input type="checkbox" id="lemon" /><label for="lemon"> Lemons</label></div>
+        <div><input type="checkbox" id="milk" /><label for="milk"> Milk</label></div>
+        <div><input type="checkbox" id="rice" /><label for="rice"> Rice</label></div>
+        <div><input type="checkbox" id="sugar" /><label for="sugar"> Sugar</label></div>
+        <div><input type="checkbox" id="oil" /><label for="oil"> Oil</label></div>
+        <div><input type="checkbox" id="stock" /><label for="stock"> Stock</label></div>
+        <div><input type="checkbox" id="pasta" /><label for="pasta"> Pasta</label></div>
+        <div><input type="checkbox" id="cinnamon" /><label for="cinnamon"> Cinnamon</label></div>
+        <div><input type="checkbox" id="beans" /><label for="beans"> Beans</label></div>
+        <div><input type="checkbox" id="honey" /><label for="honey"> Honey</label></div>
+        <div><input type="checkbox" id="flour" /><label for="flour"> Flour</label></div>
       </div>
 
       <div class="show">
-        <input onclick="window.location.href='quickrecipe.html'" type="button" class="recipe-button" value="Show Recipes">
-      </div> 
+        <input  type="button" class="recipe-button" value="Show Recipes">
+      </div>
 
       <div class="upload">
         <input onclick="window.location.href='Addrecipe.html'" type="button" class="upload-button" value="Upload your recipe">
       </div>
 
     </form>
+
+<div class="recipe_list">
+  <p class="pancake">Pancake</p>
+  <p class="spaghetti">Spaghetti</p>
+  <p class="spicypork">Spicy Pork</p>
+  <p class="pasta">Pasta</p>
+  <p class="chickenpotato">Chicken with Potato Cakes</p>
+  <p class="potatofrittata">Potato and Pea Frittata</p>
+  <p class="pizzatomato">Wholemeal Pizzas with Tomato & Pesto</p>
+  <p class="vanillamilkshake">Vanilla Milkshake</p>
+</div>
+
 
     <div class="navbar">
       <a href="donate.html" >Donate</a>
