add recipes to recipe list

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   <p class="potatofrittata">Potato and Pea Frittata</p>
   <p class="pizzatomato">Wholemeal Pizzas with Tomato & Pesto</p>
   <p class="vanillamilkshake">Vanilla Milkshake</p>
+  <p class="sausage_mushroom_pasta">Sausage and Mushroom Pasta</p>
+  <p class="sanchoybow">Vegetarian San Choy Bow</p>
 </div>
 
 
