added to show recipe

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
 
       <div class="show">
+        <input  type="button" class="allrecipe" value="Show Recipes">
         <input  type="button" class="recipe-button" value="Show Recipes">
       </div>
 
@@ -55,16 +56,20 @@
     </form>
 
 <div class="recipe_list">
-  <p class="pancake">Pancake</p>
-  <p class="spaghetti">Spaghetti</p>
-  <p class="spicypork">Spicy Pork</p>
-  <p class="pasta">Pasta</p>
-  <p class="chickenpotato">Chicken with Potato Cakes</p>
-  <p class="potatofrittata">Potato and Pea Frittata</p>
-  <p class="pizzatomato">Wholemeal Pizzas with Tomato & Pesto</p>
-  <p class="vanillamilkshake">Vanilla Milkshake</p>
-  <p class="sausage_mushroom_pasta">Sausage and Mushroom Pasta</p>
-  <p class="sanchoybow">Vegetarian San Choy Bow</p>
+  <h2>Recipe List</h2>
+  <div class="list">
+  <div class="pancake"><img src="recipe/recipe_images/pancake.jpg" height="80px" width="120px"><p>Pancake</p><button class="moreinfo" onclick="window.location.href='recipe/pancakes.html'">More info</button></div>
+  <div class="spaghetti"><img src="recipe/recipe_images/spaghetti.jpeg" height="80px" width="120px"><p>Spaghetti</p><button class="moreinfo" onclick="window.location.href='recipe/spaghetti.html'">More info</button></div>
+  <div class="spicypork"><img src="recipe/recipe_images/spicypork.jpeg" height="80px" width="120px"><p>Spicy Pork</p><button class="moreinfo" onclick="window.location.href='recipe/spicy_pork.html'">More info</button></div>
+  <div class="pasta"><img src="recipe/recipe_images/pasta.jpeg" height="80px" width="120px"><p>Pasta</p><button class="moreinfo" onclick="window.location.href='recipe/pasta.html'">More info</button></div>
+  <div class="chickenpotato"><img src="recipe/recipe_images/chicken-with-potato-cakes-80637-1.jpeg" height="80px" width="120px"><p>Chicken with Potato Cakes</p><button class="moreinfo" onclick="window.location.href='recipe/chicken_with_potato_cakes.html'">More info</button></div>
+  <div class="potatofrittata"><img src="recipe/recipe_images/Potato-&-Pea-Frittata.jpg" height="80px" width="120px"><p>Potato and Pea Frittata</p><button class="moreinfo" onclick="window.location.href='recipe/potato_&_pea_frittata.html'">More info</button></div>
+  <div class="pizzatomato"><img src="recipe/recipe_images/Wholemeal-Pizzas-with-Tomato-&-Pesto.jpg" height="80px" width="120px"><p>Wholemeal Pizzas with Tomato & Pesto</p><button class="moreinfo" onclick="window.location.href='recipe/wholemeal_pizzas_with_tomato_&_pesto.html'">More info</button></div>
+  <div class="vanillamilkshake"><img src="recipe/recipe_images/milkshake.jpeg" height="80px" width="120px"><p>Vanilla Milkshake</p><button class="moreinfo" onclick="window.location.href='recipe/vanilla_milkshake.html'">More info</button></div>
+  <div class="sausage_mushroom_pasta"><img src="recipe/recipe_images/Sausage-&-Mushroom-Pasta.jpg" height="80px" width="120px"><p>Sausage and Mushroom Pasta</p><button class="moreinfo" onclick="window.location.href='recipe/sausage_&_mushroom_pasta.html'">More info</button></div>
+  <div class="sanchoybow"><img src="recipe/recipe_images/Vegetarian-San-Choy-Bow.jpg" height="80px" width="120px"><p>Vegetarian San Choy Bow</p><button class="moreinfo" onclick="window.location.href='recipe/vegetarian_san_choy_bow.html'">More info</button></div>
+
+</div>
 </div>
 
 
