--- a/recipe/pasta.html
+++ b/recipe/pasta.html
@@ -14,7 +14,7 @@
     <h2>Quick Recipe</h2>
     <h3>Pasta</h3>
     <div class="recipe">
-      <img src="recipe_images/Pasta2.jpg" alt="Pasta" align:"left" height="100px" width="90px">
+      <img src="recipe_images/pasta.jpeg" alt="Pasta" align:"left" height="100px" width="90px">
       <div>
         <h4>Ingredients</h4>
         <ul>
