--- a/recipe/spicy_pork.html
+++ b/recipe/spicy_pork.html
@@ -14,7 +14,7 @@
     <h2>Quick Recipe</h2>
     <h3>Spicy Pork</h3>
     <div class="recipe">
-      <img src="recipe_images/5-Ingredient-Spicy-Pork-1-2.jpg" alt="Spicy Pork" align:"left" height="100px" width="90px">
+      <img src="recipe_images/spicypork.jpeg" alt="Spicy Pork" align:"left" height="100px" width="90px">
       <div>
         <h4>Ingredients</h4>
         <ul>
