--- a/recipe/vanilla_milkshake.html
+++ b/recipe/vanilla_milkshake.html
@@ -14,7 +14,7 @@
     <h2>Quick Recipe</h2>
     <h3>Vanilla Milkshake</h3>
     <div class="recipe">
-      <img src="recipe_images/Vanilla-Milkshake.jpg" alt="Vanilla Milkshake" align:"left" height="100px" width="80px">
+      <img src="recipe_images/milkshake.jpeg" alt="Vanilla Milkshake" align:"left" height="100px" width="80px">
       <div>
         <h4>Ingredients</h4>
         <ul>
