fixing up show recipe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="h2">
       <h2>Ingredient List</h2>
     </div>
-
+    <div class="stuff">
     <p>Select the ingredients you have available Or click Show recipes to see the recipe list</p></br>
 
     <form  action="quickrecipe.html">
@@ -54,7 +54,7 @@
       </div>
 
     </form>
-
+</div>
 <div class="recipe_list">
   <h2>Recipe List</h2>
   <div class="list">
