Updated the CSS for all recipe list

--- a/recipe/chicken_with_potato_cakes.html
+++ b/recipe/chicken_with_potato_cakes.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
+ 
   <body>
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Chicken with Potato Cakes</h3>
-    <div class="recipe">
-      <img src="recipe_images/chicken-with-potato-cakes-80637-1.jpeg" alt="Chicken with potato cakes" align:"left" height="100px" width="150px">
-      <div>
+      <img class="recipeimage" src="recipe_images/chicken-with-potato-cakes-80637-1.jpeg" alt="Chicken with potato cakes">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>135g btl Always Fresh Fusions Red Pepper or Tomato Tapenade</li>
@@ -31,7 +30,7 @@
           <li>Meanwhile, preheat grill on high. Cook chicken for 3-4 minutes each side or until cooked. Thickly slice.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -40,5 +39,4 @@
       <a href="../pickup.html">Pickup</a>
     </div>
   </body>
-</div>
 </html>
