--- a/recipe/potato_&_pea_frittata.html
+++ b/recipe/potato_&_pea_frittata.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Potato & Pea Frittata</h3>
-    <div class="recipe">
-      <img src="recipe_images/Potato-&-Pea-Frittata.jpg" alt="Potato & Pea Frittata" align:"left" height="100px" width="150px">
-      <div>
+      <img class="recipeimage" src="recipe_images/Potato-&-Pea-Frittata.jpg" alt="Potato & Pea Frittata">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>6 baby Red Royale or baby white potatoes, thinly sliced</li>
@@ -33,7 +32,7 @@
           <li>Cook under grill for 5 mins or until just set. Cut into wedges. Serve with salad leaves.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -41,6 +40,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
