--- a/recipe/sausage_&_mushroom_pasta.html
+++ b/recipe/sausage_&_mushroom_pasta.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Sausage & Mushroom Pasta</h3>
-    <div class="recipe">
-      <img src="recipe_images/Sausage-&-Mushroom-Pasta.jpg" alt="Sausage & Mushroom Pasta" align:"left" height="100px" width="150px">
-      <div>
+      <img class="recipeimage" src="recipe_images/Sausage-&-Mushroom-Pasta.jpg" alt="Sausage & Mushroom Pasta">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>375g pasta shells</li>
@@ -34,7 +33,7 @@
           <li>Add the pasta to the sauce mixture. Toss to combine. Sprinkle with parsley and parmesan.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -42,6 +41,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
