--- a/recipe/spaghetti.html
+++ b/recipe/spaghetti.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Spaghetti</h3>
-    <div class="recipe">
-      <img src="recipe_images/spaghetti.jpeg" alt="Spaghetti" align:"left" height="100px" width="90px">
-      <div>
+      <img class="recipeimage" src="recipe_images/spaghetti.jpeg" alt="Spaghetti">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>8 oz spaghetti</li>
@@ -34,7 +33,7 @@
           <li>Dish out, garnish with some parsley and serve immediately.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -42,6 +41,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
