--- a/recipe/spicy_pork.html
+++ b/recipe/spicy_pork.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Spicy Pork</h3>
-    <div class="recipe">
-      <img src="recipe_images/spicypork.jpeg" alt="Spicy Pork" align:"left" height="100px" width="90px">
-      <div>
+      <img class="recipeimage" src="recipe_images/spicypork.jpeg" alt="Spicy Pork">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>2 tablespoons hot chili paste (I like sambal oelek, but sriracha can also work)</li>
@@ -34,7 +33,7 @@
           <li>That’s it! Enjoy your flavour town masterpiece.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -42,6 +41,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
