--- a/recipe/vanilla_milkshake.html
+++ b/recipe/vanilla_milkshake.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Vanilla Milkshake</h3>
-    <div class="recipe">
-      <img src="recipe_images/milkshake.jpeg" alt="Vanilla Milkshake" align:"left" height="100px" width="80px">
-      <div>
+      <img class="recipeimage" src="recipe_images/milkshake.jpeg" alt="Vanilla Milkshake">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>4 large scoops (about 1 1/2 c.) vanilla ice cream</li>
@@ -30,7 +29,7 @@
           <li>Pour into a glass and garnish with whipped topping, sprinkles, and a cherry.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -38,6 +37,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
