--- a/recipe/vegetarian_san_choy_bow.html
+++ b/recipe/vegetarian_san_choy_bow.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Vegetarian San Choy Bow</h3>
-    <div class="recipe">
-      <img src="recipe_images/Vegetarian-San-Choy-Bow.jpg" alt="Vegetarian San Choy Bow" align:"left" height="100px" width="150px">
-      <div>
+      <img class="recipeimage" src="recipe_images/Vegetarian-San-Choy-Bow.jpg" alt="Vegetarian San Choy Bow">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>1 tbs vegetable oil</li>
@@ -38,7 +37,7 @@
           <li>Divide the mince mixture evenly among the lettuce leaves. Arrange the bean sprouts, almond and remaining coriander over the mince mixture to serve.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -46,6 +45,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
