--- a/recipe/pancakes.html
+++ b/recipe/pancakes.html
@@ -8,15 +8,14 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container"></div>
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <div>
       <h3>Pancakes</h3>
-      <div class="recipe">
-        <img src="recipe_images/pancake.jpg" alt="Pancake" margin-right: "20px" align:"left" height="100px" width="170px">
-        <div>
+        <img class="recipeimage" src="recipe_images/pancake.jpg" alt="Pancake">
+        <div class="layout">
           <h4>Ingredients</h4>
           <ul>
             <li>1 cup all-purpose flour</li>
@@ -33,8 +32,7 @@
             <li>Heat a lightly oiled griddle or frying pan over medium high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. Brown on both sides and serve hot.</li>
           </ol>
         </div>
-      </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -42,6 +40,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
