--- a/recipe/pasta.html
+++ b/recipe/pasta.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Pasta</h3>
-    <div class="recipe">
-      <img src="recipe_images/pasta.jpeg" alt="Pasta" align:"left" height="100px" width="90px">
-      <div>
+      <img class="recipeimage" src="recipe_images/pasta.jpeg" alt="Pasta">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>225 gm pasta penne</li>
@@ -32,12 +31,12 @@
         </ul>
         <h4>Methods</h4>
         <ol>
-          <li>Step 1- Prepare the red sauce and boil the pasta. To prepare this mouth-watering and spicy pasta recipe, first you need to prepare the sauce for the pasta. For the same, heat oil in a pan over medium flame and add minced garlic along with chopped red chilli and red chili flakes in it. Stir and saute for 2 minutes. Take another pan, pour the water and bring it to a boil. Then, add pasta to the boiling water along with salt and oil, and cook the pasta for a few minutes. When its cooked, drain the extra water and transfer the pasta in another bowl.</li>
-          <li>Step 2- Cook tomatoes along with herbs for 10-12 minutes. Now, add the peeled tomatoes, basil and parsley in the pan. Mix all the ingredients well and let it simmer for 10 minutes until the sauce starts to thicken. When the sauce starts gaining consistency, put off the burner and add salt and black pepper powder to the sauce. Keep the sauce warm. Add the pasta over the warm sauce and toss with carefully.</li>
-          <li>Step 3- Pasta is ready to relish. Cook for a while and then serve the Red Sauce Pasta immediately. (Tip: If you are someone who likes the cheesy version of pasta then you can garnish the pasta with some grated Parmesan cheese and to make it more aromatic, you can dry roast a few basil leaves and crush it with some chilli flakes and oregano. This herb fusion will make your pasta even more delectable. Serve it with garlic bread and relish this delicious pasta recipe.)</li>
+          <li>Prepare the red sauce and boil the pasta. To prepare this mouth-watering and spicy pasta recipe, first you need to prepare the sauce for the pasta. For the same, heat oil in a pan over medium flame and add minced garlic along with chopped red chilli and red chili flakes in it. Stir and saute for 2 minutes. Take another pan, pour the water and bring it to a boil. Then, add pasta to the boiling water along with salt and oil, and cook the pasta for a few minutes. When its cooked, drain the extra water and transfer the pasta in another bowl.</li>
+          <li>Cook tomatoes along with herbs for 10-12 minutes. Now, add the peeled tomatoes, basil and parsley in the pan. Mix all the ingredients well and let it simmer for 10 minutes until the sauce starts to thicken. When the sauce starts gaining consistency, put off the burner and add salt and black pepper powder to the sauce. Keep the sauce warm. Add the pasta over the warm sauce and toss with carefully.</li>
+          <li>Pasta is ready to relish. Cook for a while and then serve the Red Sauce Pasta immediately. (Tip: If you are someone who likes the cheesy version of pasta then you can garnish the pasta with some grated Parmesan cheese and to make it more aromatic, you can dry roast a few basil leaves and crush it with some chilli flakes and oregano. This herb fusion will make your pasta even more delectable. Serve it with garlic bread and relish this delicious pasta recipe.)</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -45,6 +44,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
