--- a/recipe/wholemeal_pizzas_with_tomato_&_pesto.html
+++ b/recipe/wholemeal_pizzas_with_tomato_&_pesto.html
@@ -8,14 +8,13 @@
       Quick Recipe
     </title>
   </head>
-  <div class="container">
   <body>
+    <div class="container">
     <h1>Excess Food</h1>
     <h2>Quick Recipe</h2>
     <h3>Wholemeal Pizzas with Tomato & Pesto</h3>
-    <div class="recipe">
-      <img src="recipe_images/Wholemeal-Pizzas-with-Tomato-&-Pesto.jpg" alt="Wholemeal Pizzas with Tomato & Pesto" align:"left" height="100px" width="150px">
-      <div>
+      <img class="recipeimage" src="recipe_images/Wholemeal-Pizzas-with-Tomato-&-Pesto.jpg" alt="Wholemeal Pizzas with Tomato & Pesto">
+      <div class="layout">
         <h4>Ingredients</h4>
         <ul>
           <li>2 large pieces wholemeal pita bread or wholemeal wraps</li>
@@ -31,7 +30,7 @@
           <li>Sprinkle the pizzas with the rocket and spoon over the reserved pesto dip. Cut into wedges to serve.</li>
         </ol>
       </div>
-    </div>
+    <br>
     <br>
     <br>
     <div class="navbar">
@@ -39,6 +38,6 @@
       <a href="../index.html" >Home</a>
       <a href="../pickup.html">Pickup</a>
     </div>
+  </div>
   </body>
-</div>
 </html>
